--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@ninjalib/svelte": "^0.0.6"
+		"@ninjalib/sql": "^0.2.1",
+		"zod": "3.22.0"
 	}
 }
