--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"lucia": "3.1.1",
+		"arctic": "1.5.0",
+		"cron": "3.1.7",
 		"@ninjalib/sql": "^0.2.1",
 		"zod": "3.22.0"
 	}
