--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
 	"name": "clash-armies",
 	"version": "0.0.1",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"start": "docker compose up -d && npm run dev",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
+	},
+	"engines": {
+		"node": ">=21.0.0"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -27,12 +31,11 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.1.7"
 	},
-	"type": "module",
 	"dependencies": {
 		"lucia": "3.1.1",
 		"arctic": "1.5.0",
 		"cron": "3.1.7",
-		"@ninjalib/sql": "^0.2.1",
+		"@ninjalib/sql": "^0.3.0",
 		"zod": "3.22.3"
 	}
 }
