--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
+	"trailingComma": "es5",
 	"bracketSpacing": true,
 	"printWidth": 160,
 	"plugins": ["prettier-plugin-svelte"],
