--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
 		"svelte-check": "^3.8.4",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.3",
-		"vite": "^5.3.3"
+        "vite": "^5.3.3",
+        "@types/chai": "^4.3.5",
+        "@types/chai-subset": "^1.3.5",
+        "chai": "^4.3.7",
+        "chai-subset": "^1.6.0"
 	},
 	"dependencies": {
 		"lucia": "3.1.1",
