--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-	"name": "clash-armies",
-	"version": "0.0.2",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"start": "docker compose up -d && npm run dev",
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
-	},
-	"engines": {
-		"node": ">=21.0.0"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "^5.2.0",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/eslint": "8.56.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"eslint": "^8.56.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0-next.4",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.5",
-		"svelte": "^5.0.0-next.175",
-		"svelte-check": "^3.8.4",
-		"tslib": "^2.6.3",
-		"typescript": "^5.5.3",
+    "name": "clash-armies",
+    "version": "0.0.2",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "start": "docker compose up -d && npm run dev",
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "test": "./test.sh"
+    },
+    "engines": {
+        "node": ">=21.0.0"
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-node": "^5.2.0",
+        "@sveltejs/kit": "^2.5.18",
+        "@sveltejs/vite-plugin-svelte": "^3.1.1",
+        "@types/eslint": "8.56.0",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-svelte": "^2.36.0-next.4",
+        "prettier": "^3.3.3",
+        "prettier-plugin-svelte": "^3.2.5",
+        "svelte": "^5.0.0-next.175",
+        "svelte-check": "^3.8.4",
+        "tslib": "^2.6.3",
+        "typescript": "^5.5.3",
         "vite": "^5.3.3",
         "@types/chai": "^4.3.5",
         "@types/chai-subset": "^1.3.5",
         "chai": "^4.3.7",
         "chai-subset": "^1.6.0"
-	},
-	"dependencies": {
-		"lucia": "3.1.1",
-		"arctic": "1.5.0",
-		"cron": "3.1.7",
-		"@ninjalib/sql": "^0.3.0",
-		"@ninjalib/util": "0.5.0",
-		"zod": "3.22.3"
-	}
+    },
+    "dependencies": {
+        "lucia": "3.1.1",
+        "arctic": "1.5.0",
+        "cron": "3.1.7",
+        "@ninjalib/sql": "^0.3.0",
+        "@ninjalib/util": "0.5.0",
+        "zod": "3.22.3"
+    }
 }
