--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
         "@sveltejs/adapter-node": "^5.2.0",
         "@sveltejs/kit": "^2.5.18",
         "@sveltejs/vite-plugin-svelte": "^3.1.1",
+        "@types/chai": "^4.3.5",
+        "@types/chai-subset": "^1.3.5",
         "@types/eslint": "8.56.0",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
+        "chai": "^4.3.7",
+        "chai-subset": "^1.6.0",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-svelte": "^2.36.0-next.4",
@@ -30,18 +34,28 @@
         "svelte-check": "^3.8.4",
         "tslib": "^2.6.3",
         "typescript": "^5.5.3",
-        "vite": "^5.3.3",
-        "@types/chai": "^4.3.5",
-        "@types/chai-subset": "^1.3.5",
-        "chai": "^4.3.7",
-        "chai-subset": "^1.6.0"
+        "vite": "^5.3.3"
     },
     "dependencies": {
-        "lucia": "3.1.1",
-        "arctic": "1.5.0",
-        "cron": "3.1.7",
+        "@floating-ui/dom": "^1.6.10",
         "@ninjalib/sql": "^0.3.0",
         "@ninjalib/util": "0.5.0",
+        "@tiptap/core": "^2.6.4",
+        "@tiptap/extension-character-count": "^2.6.4",
+        "@tiptap/extension-image": "^2.6.4",
+        "@tiptap/extension-link": "^2.6.4",
+        "@tiptap/extension-list-keymap": "^2.6.4",
+        "@tiptap/extension-placeholder": "^2.6.4",
+        "@tiptap/extension-text-align": "^2.6.4",
+        "@tiptap/extension-youtube": "^2.6.4",
+        "@tiptap/html": "^2.6.6",
+        "@tiptap/pm": "^2.6.4",
+        "@tiptap/starter-kit": "^2.6.4",
+        "arctic": "1.5.0",
+        "cron": "3.1.7",
+        "install": "^0.13.0",
+        "lucia": "3.1.1",
+        "npm": "^10.8.2",
         "zod": "3.22.3"
     }
 }
