--- a/package.json
+++ b/package.json
@@ -37,6 +37,16 @@
         "chai-subset": "^1.6.0"
     },
     "dependencies": {
+        "@floating-ui/dom": "^1.6.10",
+        "@tiptap/core": "^2.6.4",
+        "@tiptap/extension-character-count": "^2.6.4",
+        "@tiptap/extension-link": "^2.6.4",
+        "@tiptap/extension-list-keymap": "^2.6.4",
+        "@tiptap/extension-placeholder": "^2.6.4",
+        "@tiptap/extension-text-align": "^2.6.4",
+        "@tiptap/html": "^2.6.6",
+        "@tiptap/pm": "^2.6.4",
+        "@tiptap/starter-kit": "^2.6.4",
         "lucia": "3.1.1",
         "arctic": "1.5.0",
         "cron": "3.1.7",
