--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"lucia": "3.1.1",
 		"arctic": "1.5.0",
 		"cron": "3.1.7",
+		"date-fns": "3.6.0",
 		"@ninjalib/sql": "^0.3.0",
 		"@ninjalib/util": "0.5.0",
 		"zod": "3.22.3"
