--- a/package.json
+++ b/package.json
@@ -4,36 +4,35 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"start": "docker compose up -d && npm run dev",
-		"dev": "vite dev",
+		"start": "docker compose up -d && vite dev",
+		"production": "vite preview",
 		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"test": "./test.sh"
+		"test": "./test.sh",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json src"
 	},
 	"engines": {
-		"node": ">=21.0.0"
+		"node": ">=23.3.0"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^5.2.0",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/eslint": "8.56.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"eslint": "^8.56.0",
+		"@sveltejs/adapter-node": "^5.2.11",
+		"@sveltejs/kit": "^2.15.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@types/eslint": "9.6.1",
+		"@typescript-eslint/eslint-plugin": "^8.18.2",
+		"@typescript-eslint/parser": "^8.18.2",
+		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0-next.4",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.5",
-		"svelte": "^5.0.0-next.175",
-		"svelte-check": "^3.8.4",
-		"tslib": "^2.6.3",
-		"typescript": "^5.5.3",
-		"vite": "^5.3.3",
-		"@types/chai": "^4.3.5",
+		"eslint-plugin-svelte": "^2.46.1",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.2",
+		"svelte": "^5.16.0",
+		"svelte-check": "^4.1.1",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"vite": "^6.0.6",
+		"@types/chai": "^5.0.1",
 		"@types/chai-subset": "^1.3.5",
-		"chai": "^4.3.7",
+		"chai": "^5.1.2",
 		"chai-subset": "^1.6.0"
 	},
 	"dependencies": {
