Update/add tests
- adjusted test script a little bit
- moved test compose file to the root so all env/compose files are together (I feel this is a nicer structure)
- added new tests for notifications and max heroes allowed

--- a/compose.test.yaml
+++ b/compose.test.yaml
@@ -10,6 +10,6 @@ services:
       MARIADB_PASSWORD: ${DB_PASSWORD}
       MARIADB_DATABASE: clash-armies
     volumes:
-      - clash-armies-db:/var/lib/mysql
+      - clash-armies-test-db:/var/lib/mysql
 volumes:
-  clash-armies-db: {}
+  clash-armies-test-db: {}
