--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"@types/chai": "^5.0.1",
 		"@types/chai-subset": "^1.3.5",
 		"chai": "^5.1.2",
-		"chai-subset": "^1.6.0"
+		"chai-subset": "^1.6.0",
+		"semver": "^7.7.1"
 	},
 	"dependencies": {
 		"@floating-ui/dom": "^1.6.10",
