--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
 		"start": "docker compose up -d && vite dev",
 		"production": "vite preview",
 		"build": "vite build",
-		"test": "./test.sh",
+		"test:before": "docker compose --env-file=.env.test --file=compose.test.yaml down -v && docker compose --env-file=.env.test --file=compose.test.yaml up -d",
+		"test:coverage": "npm run test:before && vitest run --coverage",
+		"test:ui": "npm run test:before && vitest --ui --coverage.enabled=true",
+		"test": "npm run test:before && vitest run",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json src"
 	},
 	"engines": {
@@ -17,27 +20,32 @@
 		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.15.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@types/chai": "^5.0.1",
+		"@types/chai-subset": "^1.3.5",
 		"@types/eslint": "9.6.1",
 		"@typescript-eslint/eslint-plugin": "^8.18.2",
 		"@typescript-eslint/parser": "^8.18.2",
+		"@vitest/coverage-v8": "^3.1.1",
+		"@vitest/ui": "^3.1.1",
+		"chai": "^5.1.2",
+		"chai-subset": "^1.6.0",
 		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
+		"semver": "^7.7.1",
 		"svelte": "^5.16.0",
 		"svelte-check": "^4.1.1",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.2",
 		"vite": "^6.0.6",
-		"@types/chai": "^5.0.1",
-		"@types/chai-subset": "^1.3.5",
-		"chai": "^5.1.2",
-		"chai-subset": "^1.6.0",
-		"semver": "^7.7.1"
+		"vitest": "^3.1.1"
 	},
 	"dependencies": {
 		"@floating-ui/dom": "^1.6.10",
+		"@ninjalib/sql": "^0.5.1",
+		"@ninjalib/util": "0.5.0",
 		"@tiptap/core": "^2.6.4",
 		"@tiptap/extension-character-count": "^2.6.4",
 		"@tiptap/extension-link": "^2.6.4",
@@ -47,12 +55,10 @@
 		"@tiptap/html": "^2.6.6",
 		"@tiptap/pm": "^2.6.4",
 		"@tiptap/starter-kit": "^2.6.4",
-		"lucia": "3.1.1",
 		"arctic": "1.5.0",
 		"cron": "3.1.7",
 		"date-fns": "3.6.0",
-		"@ninjalib/sql": "^0.5.1",
-		"@ninjalib/util": "0.5.0",
+		"lucia": "3.1.1",
 		"zod": "3.22.3"
 	}
 }
