--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/chai": "^5.0.1",
 		"@types/chai-subset": "^1.3.5",
 		"@types/eslint": "9.6.1",
+		"@types/cookie-signature": "1.1.2",
 		"@typescript-eslint/eslint-plugin": "^8.18.2",
 		"@typescript-eslint/parser": "^8.18.2",
 		"@vitest/coverage-v8": "^3.1.1",
@@ -60,6 +61,7 @@
 		"date-fns": "3.6.0",
 		"lucia": "3.1.1",
 		"uuid": "^11.1.0",
+		"cookie-signature": "1.2.2",
 		"zod": "3.22.3"
 	}
 }
