Add dev network/https scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"start": "docker compose up -d && vite dev",
+		"start:before": "docker compose up -d",
+		"start": "npm run start:before && vite dev",
+		"start:network": "npm run start:before && vite dev --host",
+		"start:https": "DEV_HTTPS=1 npm run start:network",
 		"production": "vite preview",
 		"build": "vite build",
 		"test:before": "docker compose --env-file=.env.test --file=compose.test.yaml down -v && docker compose --env-file=.env.test --file=compose.test.yaml up -d",
@@ -35,6 +38,7 @@
 		"eslint-plugin-svelte": "^2.46.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
+		"@vitejs/plugin-basic-ssl": "2.0.0",
 		"semver": "^7.7.1",
 		"svelte": "^5.16.0",
 		"svelte-check": "^4.1.1",
