--- a/package.json
+++ b/package.json
@@ -51,15 +51,16 @@
 		"@floating-ui/dom": "^1.6.10",
 		"@ninjalib/sql": "^0.5.1",
 		"@ninjalib/util": "0.5.4",
-		"@tiptap/core": "^2.6.4",
-		"@tiptap/extension-character-count": "^2.6.4",
-		"@tiptap/extension-link": "^2.6.4",
-		"@tiptap/extension-list-keymap": "^2.6.4",
-		"@tiptap/extension-placeholder": "^2.6.4",
-		"@tiptap/extension-text-align": "^2.6.4",
-		"@tiptap/html": "^2.6.6",
-		"@tiptap/pm": "^2.6.4",
-		"@tiptap/starter-kit": "^2.6.4",
+		"@tiptap/core": "^3.10.4",
+		"@tiptap/extension-character-count": "^3.10.4",
+		"@tiptap/extension-link": "^3.10.4",
+		"@tiptap/extension-list-keymap": "^3.10.4",
+		"@tiptap/extension-placeholder": "^3.10.4",
+		"@tiptap/extension-text-align": "^3.10.4",
+		"@tiptap/html": "^3.10.4",
+		"@tiptap/pm": "^3.10.4",
+		"@tiptap/starter-kit": "^3.10.4",
+		"zeed-dom": "0.17.7",
 		"arctic": "1.5.0",
 		"cron": "3.1.7",
 		"date-fns": "3.6.0",
